Corretta la dicitura ingrezzo in ingresso. Modificato appSettings.json con nome del server "localhost" per test codice

--- a/CorsiFormazione.Web/appsettings.json
+++ b/CorsiFormazione.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MyDbContext": "Data Source=LAPTOP-F2MAJ2CS\\SQLEXPRESS; Initial catalog=CorsiFormazione; User Id=eleonoraCarb; Password=paradigmi2024;Trusted_Connection=true;"
+    "MyDbContext": "Data Source=localhost; Initial catalog=CorsiFormazione; User Id=eleonoraCarb; Password=paradigmi2024;Trusted_Connection=true;"
   },
 
   "JwtAuthentication": {
